[package]
name = "physics"
version = "0.3.1"
authors = ["AKETON <python8965@gmail.com>"]
edition = "2021"
rust-version = "1.65"


[dependencies]
# gui
egui = "0.21.0"
eframe = { version = "0.21.0", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "wgpu",
    "puffin"        # Enable profiling with puffin.
] }
image = "0.24.5"

# audio
rodio = { version = "0.17.1", features = ["wasm-bindgen"] }

# io
ehttp = "0.2.0"

# language
tracing = "0.1.37"
anyhow = "1.0.69"
paste = "1.0.12"

# math
nalgebra = "0.32.1"

instant = { version = "0.1.12", features = ["wasm-bindgen"] }

puffin = { version = "0.14.3", features = ["web"] }

puffin_egui = "0.20.0"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
wasm-bindgen-futures = "0.4"


[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2


[patch.crates-io]

# If you want to use the bleeding edge version of egui and eframe:
# egui = { git = "https://github.com/emilk/egui", branch = "master" }
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# egui = { path = "../egui/crates/egui" }
# eframe = { path = "../egui/crates/eframe" }
